started to create resume page, complete left column, starting right column

--- a/src/index.pug
+++ b/src/index.pug
@@ -1,8 +1,106 @@
 doctype html
 html
     head
-    meta(charset = 'utf-8')
-    meta(name='viewport', content="initial-scale=1.0, width=device-width")
-    title Webpack app
+        meta(charset = 'utf-8')
+        meta(name='viewport', content="initial-scale=1.0, width=device-width")
+       
+        title Webpack app
     body
-        h1 test pug
+        main
+            .column-left
+                .wrapper
+                    .main-info
+                        .circle-outer
+                         .circle-inner
+                    .name-info
+                        p.name Name Here
+                        p.surname Surname
+                        p.jobTitle Graphic Designer
+                    .profile-info
+                        .line
+                        .icon
+                        h3.title PROFILE
+                        p Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu <b> pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. </b>
+                    .contact-info
+                        .line
+                        .icon
+                        h3.title CONTACT
+                        table
+                            tr
+                                td Address
+                                td Main Street, City.
+                            tr
+                                td E-MAIL
+                                td contact@domain.com
+                            tr
+                                td PHONE
+                                td 555-555-555
+                            tr
+                                td WEBSITE
+                                td www.yourweb.com
+
+                    .skills
+                        .line
+                        .icon
+                        h3.title SKILLS
+                        p CREATIVE
+                        ul
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li.inactive
+                            li.inactive
+                            li.inactive
+                        p TEAMWORK
+                        ul
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li.inactive
+                        p INNOVATE
+                        ul
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li.inactive
+                            li.inactive
+                            li.inactive
+                            li.inactive
+                            li.inactive
+                            li.inactive
+                        p COMMUNICATION
+                        ul
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li
+                            li.inactive
+            .column-right
+                .education-info
+                    .line
+                    .icon
+                    h3.title EDUCATION
