made responsive design

--- a/src/index.pug
+++ b/src/index.pug
@@ -22,8 +22,7 @@ html
         title Webpack app
     body
         main
-            .column-left
-                .wrapper
+            .column.column-left
                     .main-info
                         .circle-outer
                          .circle-inner
@@ -66,7 +65,7 @@ html
                         +skillList('innovate')
                         p COMMUNICATION
                         +skillList('communication')
-            .column-right
+            .column.column-right
                 .education-info
                     .line
                     .icon
